--- a/App.config
+++ b/App.config
@@ -55,7 +55,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings><add name="QuanLyTrongTrotEntities" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-ULJ4Q7AM\KTPMUD20241;initial catalog=QuanLyTrongTrot;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="QuanLyTrongTrotEntities1" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-ULJ4Q7AM\KTPMUD20241;initial catalog=QuanLyTrongTrot;persist security info=True;user id=mailinh;password=154;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+	  <add name="QuanLyTrongTrotEntities" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-ULJ4Q7AM\KTPMUD20241;initial catalog=QuanLyTrongTrot;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="QuanLyTrongTrotEntities1" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-J7UA5U3P;initial catalog=QuanLyTrongTrot;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
